<resources>
    <string name="app_name">Conversor Temperatura</string>
    <string name="temperature">Temperatura:</string>
    <string name="hint_temperature_input">Digite a temperatura</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="rankine">Rankine</string>
    <string name="convert">Converter</string>
    <string name="conversion_click_hint">Clique no botão para converter</string>
    <string name="convert_from">Converter de</string>
    <string name="to">para</string>
    <string name="messsage_conversion_error">Não foi possível realizar a conversão de temperatura com os dados informados.</string>

    <string-array name="temperature_scales">
        <item>@string/celsius</item>
        <item>@string/fahrenheit</item>
        <item>@string/kelvin</item>
        <item>@string/rankine</item>
    </string-array>
</resources>