<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:startColor="#FFBB86FC"
    android:endColor="#FF6200EE"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/temperature"
        android:textColor="@color/dark_purple"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <EditText
        android:id="@+id/temperature_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperature_input"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/dark_purple"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/temperature_title"
        app:layout_constraintStart_toEndOf="@+id/temperature_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/convert_from_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_purple"
        android:text="@string/convert_from"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/result_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_title" />

    <Spinner
        android:id="@+id/from_temperature_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColor="@color/dark_purple"
        app:layout_constraintStart_toEndOf="@+id/convert_from_text_view"
        app:layout_constraintBaseline_toBaselineOf="@id/convert_from_text_view"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/convert_to_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="24sp"
        android:textColor="@color/dark_purple"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_from_text_view" />

    <Spinner
        android:id="@+id/to_temperature_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColor="@color/dark_purple"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@id/convert_to_text_view"
        app:layout_constraintStart_toEndOf="@+id/convert_to_text_view"/>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_click_hint"
        android:textColor="@color/dark_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/convert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_temperature_spinner" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>